--- a/AvaloniaApplication1/AvaloniaApplication1.csproj
+++ b/AvaloniaApplication1/AvaloniaApplication1.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="Avalonia" Version="0.10.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.0" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.0" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.12.3" />
    </ItemGroup>
 </Project>
